# pcsx_rearmed

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ABOUT-NLS  AUTHORS  COPYING  ChangeLog  ChangeLog.df  Makefile  Makefile.am  Makefile.caanoo  Makefile.in  Makefile.libretro  Makefile.maemo  NEWS  README  README.md  aclocal.m4  configure  configure.ac  ltmain.sh  pcsx.anjuta  readme.txt
.github/: build-libretro-zip.sh  extract-foreign-all.sh  extract-foreign.sh
.github/ISSUE_TEMPLATE/: custom-issue-report.md  report.yml
.github/workflows/: ci-libretro.yml  ci-linux-arm64.yml  ci-linux-armhf.yml  ci-linux.yml  dev-release.yml
blackberry_qnx/: .cproject  .project
data/: Makefile.am  Makefile.in  pcsx.desktop  pcsx.glade2
debian/: changelog  control  copyright  docs  pcsxr.menu  rules
debian_maemo/: buildpkg  control  copyright  files  install  rules
doc/: Makefile.am  Makefile.in  keys.txt  pcsx.1  tweaks.txt
frontend/: arm_utils.h  arm_utils.s  blit320.h  blit320.s  config.h  cspace.c  cspace.h  cspace_arm.S  cspace_neon.S  cspace_neon.s  in_tsbutton.c  in_tsbutton.h  libretro-cdrom.c  libretro-cdrom.h  libretro-extern  libretro-extern.T  libretro-rthreads.c  libretro-rthreads.h  libretro.c  libretro.h  libretro_core_options.h  libretro_core_options_intl.h  main.c  main.h  menu.c  menu.h  nopic.h  omap.h  pandora.c  pandora.h  pcnt.h  pcsxr-threads.c  pcsxr-threads.h  pl_gun_ts.c  pl_gun_ts.h  plat.h  plat_dummy.c  plat_omap.c  plat_omap.h  plat_pandora.c  (+8 more)
frontend/320240/: caanoo.gpe  haptic_s.cfg  haptic_w.cfg  pcsx_rearmed.ini  pollux_set.c  ui_gp2x.h  ui_miyoo.h
frontend/3ds/: 3ds_utils.c  3ds_utils.h  pthread.h  semaphore.h  utils.S
frontend/X11/: keysym.h
frontend/common/: fonts.c  fonts.h  in_sdl.c  in_sdl.h  input.c  input.h  menu.c  menu.h  plat.h  posix.h  readpng.c  readpng.h
frontend/gp2x/: in_gp2x.c  in_gp2x.h
frontend/gtk/: gtk.h
frontend/linux/: fbdev.c  fbdev.h  oshide.c  (+8 more)
gui/: AboutDlg.c  AboutDlg.h  Cheat.c  Cheat.h  ConfDlg.c  ConfDlg.h  Config.c  DebugMemory.c  DebugMemory.h  Gtk2Gui.c  Linux.h  LnxMain.c  Makefile.am  Makefile.in  MemcardDlg.c  MemcardDlg.h  Plugin.c
include/: arm_features.h  compiler_features.h  config.h  config.h.in  pcnt.h  psemu_plugin_defs.h
jni/: Android.mk  Application.mk
libpcsxcore/: Makefile.am  Makefile.in  cdriso.c  cdriso.h  cdrom-async.c  cdrom-async.h  cdrom.c  cdrom.h  cheat.c  cheat.h  coff.h  database.c  database.h  debug.c  debug.h  decode_xa.c  decode_xa.h  disr3000a.c  gpu.c  gpu.h  gte.c  gte.h  gte_arm.S  gte_arm.h  gte_arm.s  gte_arm64.S  gte_arm64.h  gte_divider.c  gte_divider.h  gte_neon.S  gte_neon.h  gte_neon.s  gte_nf.c  gte_nf_arm.S  gte_nf_arm64.S  gte_nf_neon.S  mdec.c  mdec.h  memmap.h  memmap_win32.c  (+39 more)
libpcsxcore/ix86/: iGte.h  iR3000A.c  ix86.c  ix86.h
libpcsxcore/ix86_64/: README  iGte.h  iR3000A-64.c  ix86-64.c  ix86-64.h  ix86_3dnow.c  ix86_cpudetect.c  ix86_fpu.c  ix86_mmx.c  ix86_sse.c
libpcsxcore/lightrec/: big_ass_debugger.py  internals.c  internals.h  mem.c  mem.h  mem_wiiu.c  plugin.c  plugin.h  sysconf.c
libpcsxcore/new_dynarec/: assem_arm.c  assem_arm.h  assem_arm64.c  assem_arm64.h  assem_x64.c  assem_x64.h  assem_x86.c  assem_x86.h  emu_if.c  emu_if.h  events.c  events.h  fpu.c  fpu.h  linkage_arm.S  linkage_arm.s  linkage_arm64.S  linkage_offsets.h  linkage_x86.s  linkage_x86_64.s  new_dynarec.c  new_dynarec.h  new_dynarec_config.h  pcsxmem.c  pcsxmem.h  pcsxmem_inline.c
libpcsxcore/new_dynarec/arm/: assem_arm.c  assem_arm.h  linkage_arm.S  linkage_offsets.h
libpcsxcore/new_dynarec/backends/psx/: emu_if.c  emu_if.h  pcsxmem.c  pcsxmem.h
libpcsxcore/new_dynarec/patches/: trace_drc_chk  trace_intr
libpcsxcore/ppc/: pGte.h  pR3000A.c  pasm.s  ppc.c  ppc.h  ppc_mnemonics.h  reguse.c  reguse.h
macosx/: ConfigurationController.h  ConfigurationController.m  EmuThread.h  EmuThread.m  ExtendedKeys.h  Info.plist  PcsxController.h  PcsxController.m  PcsxPlugin.h  PcsxPlugin.m  PcsxPluginDocument.h  PcsxPluginDocument.m  Plugin.c  PluginController.h  PluginController.m  PluginList.h  PluginList.m  config.h  main.m
maemo/: hildon.c  maemo_common.h  maemo_xkb.c  main.c  main.h  minimal.h
miyoo/: pkg.cfg
pandora/: pcsx.pxml  pcsx.pxml.templ  pcsx.sh  readme.txt
pixmaps/: Makefile.am  Makefile.in
plugins/dfcdrom/: Makefile.am  Makefile.in  cdr-libcdio.c  cdr-linux.c  cdr-null.c  cdr.c  cdr.h  cfg.c  util.c
plugins/dfcdrom/cdrcfg-0.1df/: dfcdrom.glade2  main.c
plugins/dfinput/: Makefile.am  Makefile.in  analog.c  cfg-gtk2.c  cfg.c  dfinput.glade2  externals.h  guncon.c  main.c  main.h  pad.c  pad.h  sdljoy.c  xkb.c
plugins/dfnet/: Makefile.am  Makefile.in  cfg.c  dfnet.c  dfnet.glade2  dfnet.h  gui.c  unix.c
plugins/dfsound/: Makefile.am  Makefile.c64p  Makefile.in  adsr.c  adsr.h  alsa.c  arm_utils.S  arm_utils.s  cfg.c  cfg.h  dma.c  dma.h  dsoundoss.h  externals.h  freeze.c  gauss_i.h  nullsnd.c  oss.c  out.c  out.h  psemuxa.h  pulseaudio.c  registers.c  registers.h  regs.h  reverb.c  reverb.h  sdl.c  spu.c  spu.h  spu_c64x.c  spu_c64x.h  spu_c64x_dspcode.c  spu_config.h  stdafx.h  xa.c  xa.h
plugins/dfsound/spucfg-0.1df/: dfsound.glade2  main.c
plugins/dfxvideo/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  draw.c  draw.h  draw_fb.c  draw_pl.c  externals.h  fps.c  fps.h  gpu.c  gpu.h  gpulib_if.c  hq2x.h  hq3x.h  i386.asm  interp.h  key.c  menu.c  prim.c  soft.c  soft.h  swap.h  zn.c
plugins/dfxvideo/gpucfg-0.1df/: dfxvideo.glade2  main.c
plugins/peopsxgl/: Makefile.am  Makefile.in  cfg.c  cfg.h  draw.c  draw.h  externals.h  fps.c  fps.h  gl_ext.h  gpu.c  gpu.h  key.c  key.h  menu.c  menu.h  prim.c  prim.h  soft.c  soft.h  stdafx.h  texture.c  texture.h
plugins/peopsxgl/gpucfg/: callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  it.gmo  it.po  pcsx.pot  pt_BR.gmo  pt_BR.po  ru_RU.gmo  ru_RU.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
tools/: Makefile  psxcimg.c
win32/: config.h  pcsx.dev  pcsx.dsp  pcsx.rc  pcsx.sln  pcsx.vcproj  resource.h
(+251 files in other folders)
